--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
                             <transformers>
                                 <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>motor.KafkaConsumerExample</mainClass>
+                                    <mainClass>motor.EventConsumer</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
