--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.5.5</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -40,7 +52,7 @@
                             <transformers>
                                 <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>motor.EventConsumer</mainClass>
+                                    <mainClass>motor.MainEntry</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
